--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
-* {
+*
+*::before,
+*::after {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
+
+html,
+body,
+.wrapper {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
