--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,18 @@ button:hover {
 }
 
 @media screen and (max-width: 996px) {
+
+    h1 {
+        font-size: 35px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+
     #password {
-        width: 500px;
-        height: 200px;
+        width: 400px;
+        height: 150px;
         border-style: dashed;
         border-width: 2px;
         border-radius: 2px;
@@ -81,8 +90,21 @@ button:hover {
     }
 
     .button-spaces {
-        margin-left: 125px;
+        margin-left: 100px;
         margin-top: 15px;
     }
     
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 60px;
+        font-size: 18px;
+        background-color: rgb(205, 61, 61);
+        color: white;
+        border-radius: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
