--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,4 +107,8 @@ button:hover {
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    button:active {
+        background-color: black;
+    }
 }
